# grammex

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: deploy-pages.yml
benches/: matching.rs
demo-wasm/: Cargo.toml
demo-wasm/scripts/: validate-site.sh
demo-wasm/src/: lib.rs
demo-wasm/www/: index.html  main.js  style.css
src/: config.rs  constraint.rs  edge.rs  error.rs  graph.rs  lib.rs  node.rs  observer.rs  pattern.rs  rewriter.rs  rule.rs  strategy.rs
tests/: determinism.rs  dungeon_grammar.rs  parallel_rewriting.rs  quest_grammar.rs
